2009-Jun-21  yselkowitz

	* Post-release version bump.

2009-Jun-16  yselkowitz

	* Tagged 0.9.7.

	* lib/kde4.cygclass: Add SRC_URI for stable KOffice2.

	* lib/git.cygclass: Allow GIT_MODULE to be user-defined.

	* lib/xfce4.cygclass: Leave ORIG_PN handling to the .cygport file.
	(xfce4_autoreconf): Declare glib-gettext usage.
	(xfce4_compile): No need to override libexecdir any more.

	* lib/python.cygclass (python_optimize): Omit ${D} from compiled location.

2009-Jun-15  yselkowitz

	* bin/cygport.in (cyginstall):
	* lib/autotools.cygclass (cygconf): Default libexecdir should be /usr/lib;
	see http://cygwin.com/ml/cygwin-apps/2009-06/msg00101.html and thread.

2009-Jun-09  yselkowitz

	* lib/gnome.org.cygclass: GNOME development has moved from subversion
	to git; define GIT_URI instead of SVN_URI.

2009-Jun-05  yselkowitz

	* configure.ac: Post-release version bump.	

	* Tagged 0.9.6.

2009-Jun-04  yselkowitz

	* bin/cygport.in: Export CC, CXX, and friends.
	* lib/cmake.cygclass: Use CC, CXX, and LDFLAGS.

	* bin/cygport.in (__prepuac): New internal function to create side-by-side
	.manifest files for apps whose names trigger UAC.
	(__src_postinst): Call it.
	* data/Makefile.am:
	* data/uac-manifest.in: Add manifest template for it.

	* bin/cygport.in (__prepvargames): New internal function to run
	make_etc_defaults on scores files in /var/games.
	(__src_postinst): Call it.

	* bin/cygport.in (__prepman): Fix ncurses manpage postinstall:
	http://cygwin.com/ml/cygwin/2009-03/msg00987.html

	* bin/cygport.in (cygpatch): Fix .cygwin.patch application where
	SRC_DIR is deep: http://www.cygwin.com/ml/cygwin/2009-05/msg00281.html

	* bin/cygport.in: Set LDFLAGS default to "-Wl,--enable-auto-import".
	Set MAKEOPTS to number_of_cores + 1 even on multicore systems.
	* data/cygport.conf: Ditto, and document it.

	* bin/cygport.in (__config_equals, __config_get, __config_set):
	New internal functions for saving information across stages.